<resources>
    <string name="loading">加载中</string>
    <string name="pull_to_refresh_guide_tips">下拉即可刷新</string>
    <string name="pull_to_refreshing_tips">正在刷新列表</string>
    <string name="release_to_refresh_guide_tips">松开即可刷新</string>
    <string name="quit_app">再次点击退出 MORE.ONE</string>
    <string name="open_price">开盘价</string>
    <string name="close_price">收盘价</string>
    <string name="high_price">最高价</string>
    <string name="low_price">最低价</string>
    <string name="price">价格</string>
    <string name="change_rate">涨跌幅</string>
    <string name="volume">成交量</string>
    <string name="app_name">金囤在线</string>
    <string name="no_net">请检查网络</string>
    <string name="login">登录</string>
    <string name="fund_detail_title">资金明细</string>
    <string name="dialog_titile">提示</string>
    <string name="no_data">暂无数据</string>
    <string name="please_login">您还未登录,请登录</string>
    <string name="clean_message">确定要清空消息吗</string>
    <string name="balance_money">账户余额</string>
    <string name="btn_add">立即添加</string>
    <string name="btn_delete">删除</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_save">保存</string>
    <string name="btn_commit">确定</string>
    <string name="btn_quit">安全退出</string>
    <string name="btn_commit_pay">确认支付</string>
    <string name="btn_commit_recharge">提交充值</string>
    <string name="btn_commit_fix">提交修改</string>
    <string name="btn_copy">复制</string>
    <string name="btn_clean">清空</string>
    <string name="btn_rebate">提现</string>
    <string name="btn_not_buy">非点买时间断</string>
    <string name="btn_buy">立即点买</string>
    <string name="main_tab_title_1">首页</string>
    <string name="main_tab_title_2">咨询</string>
    <string name="main_tab_title_3">交易</string>
    <string name="main_tab_title_4">持仓</string>
    <string name="main_tab_title_5">我的</string>
    <string name="mine_head_money">账户余额(元)</string>
    <string name="mine_head_button_recharge">充值</string>
    <string name="mine_head_button_withdrawal">提现</string>
    <string name="mine_menu_title1">资金明细</string>
    <string name="mine_menu_title2">银行卡设置</string>
    <string name="mine_menu_title3">消息中心</string>
    <string name="mine_menu_title4">我的红包</string>
    <string name="mine_menu_title5">邀请赚佣金</string>
    <string name="mine_menu_title6">活动专区</string>
    <string name="mine_menu_title7">常见问题</string>
    <string name="mine_menu_title8">关于我们</string>
    <string name="mine_menu_title9">安全设置</string>
    <string name="home_help_about_us">关于我们</string>
    <string name="home_help_center">帮助中心</string>
    <string name="home_help_save">安全保障</string>
    <string name="home_help_ask_online">在线咨询</string>
    <string name="home_help_notice">股市有风险,投资需谨慎</string>
    <string name="home_notice_title1">股票操盘</string>
    <string name="home_notice_title2">期货操盘</string>
    <string name="home_notice_title3">股票模拟</string>
    <string name="home_notice_title4">期货模拟</string>
    <string name="home_notice_more">更多</string>
    <string name="home_notice_new">最新</string>
    <string name="home_stock_title">股票操盘</string>
    <string name="home_rang_title">操盘排行榜</string>
    <string name="home_forward_tab_title_1">国际期货</string>
    <string name="home_forward_tab_title_2">国内期货</string>
    <string name="home_trade_ing">交易中</string>
    <string name="home_trade_end">休市中</string>
    <string name="home_rang_look">查看榜单</string>
    <string name="bank_type">储蓄卡</string>
    <string name="bank_add_bank">+添加银行卡</string>
    <string name="bank_card_title">银行卡管理</string>
    <string name="bank_add_real_name">真实姓名</string>
    <string name="bank_add_real_name_hint">请输入您的真实姓名</string>
    <string name="bank_add_bank_num">银行卡号</string>
    <string name="bank_add_bank_num_hint">请输入您的银行卡号</string>
    <string name="bank_add_which_bank">选中银行</string>
    <string name="bank_add_which_bank_hint">请选择银行</string>
    <string name="bank_add_zone">所在地区</string>
    <string name="bank_add_zone_hint">请选择地址</string>
    <string name="bank_add_bank_name">开户行</string>
    <string name="bank_add_bank_name_hint">请输入开户行</string>
    <string name="bank_add_title">添加银行卡</string>
    <string name="bank_card_choose_titile">选择银行卡</string>
    <string name="message_title">消息中心</string>
    <string name="message_clean">清空</string>
    <string name="red_packet_no_use">未使用</string>
    <string name="red_packet_use">已使用</string>
    <string name="red_packet_overdue">已过期</string>
    <string name="red_packet_titile">我的红包</string>
    <string name="login_titile">登录</string>
    <string name="login_mobile_hint">请输入手机号码</string>
    <string name="login_save_password">保存密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_out">退出成功</string>
    <string name="login_register">用户注册</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="rank_name">排名</string>
    <string name="rank_user_name">用户名</string>
    <string name="rank_money">操盘金额</string>
    <string name="rank_time">时间</string>
    <string name="rank_title">操盘排行榜</string>
    <string name="save_notice">点击头像修改</string>
    <string name="save_bind_mobile">绑定手机</string>
    <string name="save_fix">修改</string>
    <string name="save_password">登录密码</string>
    <string name="save_cash_password">提现密码</string>
    <string name="save_binded">已绑定</string>
    <string name="save_titile">安全设置</string>
    <string name="recharge_pay_ali">支付宝支付</string>
    <string name="recharge_pay_wechat">微信支付</string>
    <string name="recharge_underline">线下支付</string>
    <string name="recharge_payway">请选择支付方式</string>
    <string name="recharge_money">充值金额</string>
    <string name="recharge_money_hint">请输入您要充值的金额</string>
    <string name="recharge_pay_user">付款人</string>
    <string name="recharge_pay_user_hint">请输入付款人姓名</string>
    <string name="recharge_pay_acccount">付款账号</string>
    <string name="recharge_pay_acccount_hint">付款账号</string>
    <string name="recharge_pay_way">请选择付款方式</string>
    <string name="recharge_upload_proof">请上传凭证</string>
    <string name="recharge_copy_account">复制账号</string>
    <string name="recharge_copy_account_toast">账号已复制</string>
    <string name="recharge_no_money_toast">请输入金额</string>
    <string name="recharge_commit_pay_success">提交成功</string>
    <string name="recharge_title">充值中心</string>
    <string name="recharge_underline_title">线下充值</string>
    <string name="recharge_underline_dialog_title">选中图片</string>
    <string name="withdrawal_money">提现金额</string>
    <string name="withdrawal_money_back">到账时间</string>
    <string name="withdrawal_poundage">手续费</string>
    <string name="withdrawal_forget_password">忘记密码？</string>
    <string name="withdrawal_dialog_title">到账时间</string>
    <string name="withdrawal_amount_toast">请输入提现金额</string>
    <string name="withdrawal_password_toast">请输入提现密码</string>
    <string name="withdrawal_titile">提现</string>
    <string name="withdrawal_no_card_toast">请选择银行卡</string>
    <string name="withdrawal_password_titile">设置提现密码</string>
    <string name="register_titile">注册</string>
    <string name="register_identify_hint">请输入4位短信验证码</string>
    <string name="register_get_identify">获取验证码</string>
    <string name="register_password_hint">请设置登录密码</string>
    <string name="register_confirm_password_hint">确认登录密码</string>
    <string name="register_invite_code_hint">请输入邀请码(可选)</string>
    <string name="register_agree">我已阅读并同意</string>
    <string name="register_protocol"><![CDATA[<APP服务协议>]]></string>
    <string name="register_no_confirm_password_toast">确认登录密码不能为空</string>
    <string name="register_2_password_toast">2次输入的密码不一致</string>
    <string name="register_identify_code_send">验证码发送成功</string>
    <string name="register_agree_protocol_toast">请点击同意本协议</string>
    <string name="register_mobile_err_toast">请输入正确的手机号</string>
    <string name="register_success">注册成功</string>
    <string name="register_old_password_hint">请输入旧密码</string>
    <string name="register_new_password_hint">请输入6位数字新密码</string>
    <string name="register_new_password_commit_hint">请确认6位数字新密码</string>
    <string name="forget_password_titile">忘记密码</string>
    <string name="forget_password_toast">密码已设置成功</string>
    <string name="reset_password_titile">重置密码</string>
    <string name="reset_password_toast">密码重置成功</string>
    <string name="invite_titile">邀请中心</string>
    <string name="invite_rule">邀请规则</string>
    <string name="invite_success_rebate">成功提现佣金(元)</string>
    <string name="invite_can_rebate">可提现佣金(元)</string>
    <string name="invite_can_rebate_from">(返佣账户</string>
    <string name="invite_can_rebate_to">会员账户)</string>
    <string name="invite_rebate_cash">佣金提现</string>
    <string name="invite_link_title">我的邀请链接</string>
    <string name="invite_copy_link">复制链接</string>
    <string name="invite_QR_code">我的邀请二维码</string>
    <string name="invite_save_pic">保存图片</string>
    <string name="invite_introduce">说明:直接点击\"分享好友,可分享给QQ好友、微信好友等。凡是通过该链接或者二维码注册进来的用户，都是您的邀请客户，他们操作了，你就有一定的返佣哦。\"</string>
    <string name="invite_method">邀请方式</string>
    <string name="invite_my_invite">我的邀请</string>
    <string name="invite_rebate_detail">返佣明细</string>
    <string name="invite_withdrawal_detail">提现明细</string>
    <string name="invite_link_toast">链接已复制</string>
    <string name="invite_save_qrcode_success_toast">保存二维码成功</string>
    <string name="invite_one">一级邀请</string>
    <string name="invite_two">二级邀请</string>
    <string name="invite_my_titile">我的邀请</string>
    <string name="invite_way_method_1">方法一:发送下面邀请链接给好友或者其他朋友，通过此链接，注册成功即可成为你的推广客户。</string>
    <string name="invite_way_link">邀请链接:</string>
    <string name="invite_way_method_2">方法二:保存你的专属二维码，并分享给你的好友</string>
    <string name="invite_way_titile">邀请方式</string>
    <string name="my_invite_item_1">序号</string>
    <string name="my_invite_item_2">被邀人</string>
    <string name="my_invite_item_3">手机号</string>
    <string name="my_invite_item_4">注册时间</string>
    <string name="main_service_online">在线客服</string>
    <string name="main_service_telephone">客服电话</string>
    <string name="service_title">客服中心</string>
    <string name="trade_title">交易</string>
    <string name="trade_tab_title_1">实盘交易</string>
    <string name="trade_tab_title_2"><![CDATA[ 模拟体验]]></string>
    <string name="withdrawal_detail_titile">提现明细</string>
    <string name="withdrawal_detail_rule">提现说明</string>
    <string name="withdrawal_detail_all">所有</string>
    <string name="withdrawal_detail_hold">待审核</string>
    <string name="withdrawal_detail_already">已提现</string>
    <string name="withdrawal_detail_miss">无效</string>
    <string name="rebate_titile">返佣明细</string>
    <string name="rebate_rule">返佣说明</string>
    <string name="rebate_one">一级返佣</string>
    <string name="rebate_two">二级返佣</string>
    <string name="rebate_time">时间</string>
    <string name="rebate_product">交易产品</string>
    <string name="rebate_real_name">交易人</string>
    <string name="rebate_price">交易综合费(元)</string>
    <string name="rebate_my_rebate">我的返佣</string>
    <string name="main_hold_real_trade">实盘交易</string>
    <string name="main_hold_fake_trade">模拟交易</string>
    <string name="main_hold_stock_real">实盘股票</string>
    <string name="main_hold_forward_real">实盘期货</string>
    <string name="main_hold_stock_fake">股票模拟</string>
    <string name="main_hold_forward_fake">期货模拟</string>
    <string name="main_hold_holder">持仓</string>
    <string name="main_hold_accounts">结算</string>
    <string name="main_hold_holder_fake">模拟持仓</string>
    <string name="main_hold_accounts_fake">模拟结算</string>
    <string name="news_title">站内公告</string>
    <string name="sell_dialog_stock">点卖股票:</string>
    <string name="sell_dialog_money">点卖金额:</string>
    <string name="sell_dialog_time">结算时间:</string>
    <string name="sell_dialog_num">卖出数量:</string>
    <string name="sell_dialog_price">卖出价格:</string>
    <string name="sell_dialog_mark_price">市价卖出</string>
    <string name="sell_dialog_notice">金主将执行您的买卖指令,盈亏由您自己承担</string>
</resources>