<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:background="@color/ys_33_33_33"
    android:gravity="center_vertical"
    android:orientation="horizontal">


    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_invite_item_1"
        android:textColor="@color/ys_255_255_255"
        android:textSize="13sp" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_invite_item_2"
        android:textColor="@color/ys_255_255_255"
        android:textSize="13sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/my_invite_item_3"
        android:textColor="@color/ys_255_255_255"
        android:textSize="13sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/my_invite_item_4"
        android:textColor="@color/ys_255_255_255"
        android:textSize="13sp" />

</LinearLayout>