<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/commonHeadView"
            layout="@layout/common_head" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/editCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/register_identify_hint" />

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                tools:text="1377****6287" />

            <TextView
                android:id="@+id/tvIdentifyCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/register_get_identify" />
        </LinearLayout>

        <EditText
            android:id="@+id/editOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_old_password_hint"
            android:inputType="numberPassword"
            android:padding="20dp" />

        <EditText
            android:id="@+id/editNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_new_password_hint"
            android:inputType="numberPassword"
            android:padding="20dp" />

        <EditText
            android:id="@+id/editCommitNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_new_password_commit_hint"
            android:inputType="numberPassword"
            android:padding="20dp" />

        <Button
            android:id="@+id/btnCommit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/btn_commit_fix" />
    </LinearLayout>
</layout>