<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="5dp"
    android:background="@color/ys_33_33_33">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="12sp"
        android:textColor="@color/ys_255_255_255"
        android:gravity="center"
        android:text="@string/rebate_time" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/ys_255_255_255"
        android:text="@string/rebate_real_name" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/ys_255_255_255"
        android:text="@string/rebate_product" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/ys_255_255_255"
        android:text="@string/rebate_my_rebate" />
</LinearLayout>