<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/commonHeadView"
            layout="@layout/common_head" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rank_name" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rank_user_name" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rank_money" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rank_time" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</layout>