<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ys_30_30_30">

    <LinearLayout
        android:id="@+id/llHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAboutUs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_help_about_us"
            android:textColor="@color/ys_170_180_189"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ys_200_208_214" />

        <TextView
            android:id="@+id/tvHelpCenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_help_center"
            android:textColor="@color/ys_170_180_189"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ys_200_208_214" />

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_help_save"
            android:textColor="@color/ys_170_180_189"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ys_200_208_214" />

        <TextView
            android:id="@+id/tvAskOnline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_help_ask_online"
            android:textColor="@color/ys_170_180_189"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llHelp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/home_help_notice"
        android:textColor="@color/ys_170_180_189"
        android:textSize="12sp" />
</RelativeLayout>