<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                tools:background="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvNotice"
                android:layout_toRightOf="@+id/imgIcon"
                tools:text="13779926287" />

            <TextView
                android:id="@+id/tvNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/imgIcon"
                android:text="@string/save_notice" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_bind_mobile" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBindMobileState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/save_fix" />

                <ImageView
                    android:id="@+id/ivMobileArrow"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_launcher" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/red_b" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_password" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBindPasswordState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/save_fix" />

                <ImageView
                    android:id="@+id/ivPasswordArrow"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_launcher" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/red_b" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_cash_password" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBindCashState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/save_fix" />

                <ImageView
                    android:id="@+id/ivCashArrow"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_launcher" />
            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btnQuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/btn_quit" />
    </LinearLayout>
</layout>